added timeline section

--- a/index.html
+++ b/index.html
@@ -45,49 +45,115 @@
         <div class="container">
           <div class="reference-card">
             <div class="reference__text">
-              <p>I had the pleasure of managing Andrew for three years at We Make Websites. As a Product Owner, Andrew consistently exceeded expectations with his technical expertise and deep understanding. His ability to navigate complex projects and collaborate effectively with cross-functional teams was invaluable. Client feedback also was also stellar. 
-              I highly recommend him for any role that requires a skilled and dedicated Product Owner.</p>
-            </div>
-            <div class="reference-info">
-              <img class="reference-info__image" src="imgs/nick-square.jpg" />
-              <div class="reference-info__text">
-                <p class="reference-info__name">Nick Hurst</p>
-                <p class="reference-info__title">Head of Merchant Strategy, By Association Only</p>
+              <p>I had the pleasure of managing Andrew for three years at We Make Websites.<br>
+                As a Product Owner Andrew consistently exceeded expectations with his technical expertise and deep understanding of the platform. His ability to navigate complex projects and collaborate effectively with cross-functional teams was invaluable. Client feedback also was also stellar. Andrew is a true team player who always goes the extra mile to ensure project success. He's also just a great guy and I'd happily work with him again in the future if the opportunity came up. I highly recommend him for any role that requires a skilled and dedicated Product Owner.</p>
+                <div class="reference-fade"></div>
               </div>
-            </div>
-            <span>01</span>
+              <div class="reference-info">
+                <img class="reference-info__image" src="imgs/nick-square.jpg" />
+                <div class="reference-info__text">
+                  <p class="reference-info__name">Nick Hurst</p>
+                  <p class="reference-info__title">Head of Merchant Strategy,<br>By Association Only</p>
+                </div>
+              </div>
           </div>
           <div class="reference-card">
             <div class="reference__text">
-              <p>Andrew is an absolute gem of a person and an asset to any business. His knowledge and attention to detail is exceptional and he will always go above and beyond to help out colleagues and clients alike. On top of that, he’s a genuinely top bloke. It was a pleasure working alongside Andrew for the past 3 years and I hope we get the opportunity to work together again at some point in the future. </p>
-            </div>
-            <div class="reference-info">
-              <img class="reference-info__image" src="imgs/peter-square.jpg" />
-              <div class="reference-info__text">
-                <p class="reference-info__name">Peter Wilson</p>
-                <p class="reference-info__title">Head of Shopify, ROIROI</p>
+              <p>I had the pleasure of working with Andrew Robinson at We Make Websites, where he was the Product Owner on a number of builds I supported as a web developer. Andrew stood out immediately for his sharp technical understanding and clear communication. He consistently translated complex requirements into actionable tasks and collaborated seamlessly across disciplines.<br>
+              We also had several 1:1 sessions focused on Shopify development, and I was always impressed by his eagerness to deepen his technical skills and ask thoughtful, relevant questions. His combination of strategic product thinking and hands-on technical knowledge made him a huge asset to any team. I'd love to work with him again.</p>
+                <div class="reference-fade"></div>
               </div>
-            </div>
-            <span>02</span>
+              <div class="reference-info">
+                <img class="reference-info__image" src="imgs/billy.jpg" />
+                <div class="reference-info__text">
+                  <p class="reference-info__name">Billy Noyes</p>
+                  <p class="reference-info__title">Demo Engineer,<br>Shopify</p>
+                </div>
+              </div>
           </div>
           <div class="reference-card">
-            <div class="reference__text">
-              <p>Andrew has excellent oversight of all his clients and product strategies, making him a joy to work with. He works collaboratively with all teams to ensure the seamless delivery of products and features.
-                One of his unique qualities as a Product Owner is his knowledge and passion for understanding the technical aspects alongside the developers. This comprehensive view makes creating designs easier, as he has a 360-degree perspective on everything.
-                I highly recommend him to any organisation looking for a skilled and dedicated Product Owner.</p>
+              <div class="reference__text">
+                <p>Andrew is an absolute gem of a person and an asset to any business. His knowledge and attention to detail is exceptional and he will always go above and beyond to help out colleagues and clients alike. On top of that, he's a genuinely top bloke. It was a pleasure working alongside Andrew for the past 3 years and I hope we get the opportunity to work together again at some point in the future.</p>
+                <div class="reference-fade"></div>
+              </div>
+              <div class="reference-info">
+                <img class="reference-info__image" src="imgs/peter-square.jpg" />
+                <div class="reference-info__text">
+                  <p class="reference-info__name">Peter Wilson</p>
+                  <p class="reference-info__title">Head of Shopify,<br> ROIROI</p>
+                </div>
+              </div>
             </div>
-            <div class="reference-info">
+            <div class="reference-card">
+              <div class="reference__text">
+                <p>Andrew has excellent oversight of all his products and strategies, making him a joy to work with. He works collaboratively with all teams to ensure the seamless delivery of products and features. One of his unique qualities as a Product Owner is his knowledge and passion for understanding the technical aspects alongside the developers. This comprehensive view makes creating designs easier, as he has a 360-degree perspective on everything. <br>I highly recommend him to any organisation looking for a skilled and dedicated Product Owner.</p>
+                <div class="reference-fade"></div>
+              </div>
+              <div class="reference-info">
               <img class="reference-info__image" src="imgs/lauren.png" />
               <div class="reference-info__text">
                 <p class="reference-info__name">Lauren Clarke</p>
-                <p class="reference-info__title">Senior UX/UI Designer, Underwaterpistol</p>
+                <p class="reference-info__title">Senior UX/UI Designer,<br>Underwaterpistol</p>
               </div>
             </div>
-            <span>03</span>
           </div>
-          <div class="references__btns">
-            <button class="prev"><ion-icon name="arrow-back-outline"></ion-icon></button>
-            <button class="next"><ion-icon name="arrow-forward-outline"></ion-icon></button>
+        </div>
+        <div class="references__btns">
+          <button class="prev"><ion-icon name="arrow-back-outline"></ion-icon></button>
+          <button class="next"><ion-icon name="arrow-forward-outline"></ion-icon></button>
+        </div>
+      </section>
+      <section class="section-experience">
+        <h2 class="heading heading-secondary">What I've been up to.</h2>
+        <p class="body-copy">I've spent the last 7 years immersed in tech businesses, occupying roles spanning Project Management, Product Management and Development.</p> 
+        <p class="body-copy u-mt-1">The consistent theme has always been a hyper-focus on delivering value, learning, and building products I'm proud of. Here's an overview of the journey so far.</p>
+        <div class="timeline-container">
+          <div class="timeline">
+            <div class="timeline__list">
+              <div class="timeline__item">
+                <div class="timeline__dot"></div>
+                <div class="timeline__content">
+                  <div class="timeline__date">2024 - Present</div>
+                  <h3 class="timeline__title">Product Owner & Developer</h3>
+                  <h4 class="timeline__company">Function</h4>
+                  <p class="timeline__description">A hybrid role acting as the first Product Owner in the organisation while also directly carrying out development tasks.</p>
+                </div>
+              </div>
+              <div class="timeline__item">
+                <div class="timeline__dot"></div>
+                <div class="timeline__content">
+                  <div class="timeline__date">2021 - 2024</div>
+                  <h3 class="timeline__title">Product Owner</h3>
+                  <h4 class="timeline__company">We Make Websites</h4>
+                  <p class="timeline__description">Working within a cross-functional squad including a UX/UI Designer, multiple Developers, a Project Manager and a QA to deliver large scale complex products for retail clients. I was ultimately responsible for maximising the value of the end product, analysing data to create and deliver product roadmaps, creating technical specification documents, writing user stories and acceptance criteria, running refinement sessions for accurate task estimation, managing production deployments of high value product releases and handling direct client communications.</p>
+                </div>
+              </div>
+              <div class="timeline__item">
+                <div class="timeline__dot"></div>
+                <div class="timeline__content">
+                  <div class="timeline__date">2019 - 2021</div>
+                  <h3 class="timeline__title">Digital Project Manager</h3>
+                  <h4 class="timeline__company">Space 48</h4>
+                  <p class="timeline__description">Responsible for managing anywhere from 6 - 8 different projects simultaneously, comprising a mix of retainer work and new builds.</p>
+                  <p class="timeline__achievements">Key Achievements:
+                    <ul>
+                      <li>Solely responsible for managing one of the internal ‘squads’, which included 5 developers and a QA tester. I was credited with taking it from a junior team to one of the highest-performing squads in the business.</li>
+                      <li>Led discovery sessions and project estimation for six-figure new product builds.</li>
+                      <li>Maintained up-to-date documentation, ran daily stand-ups, regular planning meetings and retrospectives, planned the sprints and releases and was the main point of contact for the clients on the projects I managed.</li>
+                    </ul>
+                  </p>
+                </div>
+              </div>
+              <div class="timeline__item">
+                <div class="timeline__dot"></div>
+                <div class="timeline__content">
+                  <div class="timeline__date">2018 - 2018</div>
+                  <h3 class="timeline__title">Digital Project Coordinator</h3>
+                  <h4 class="timeline__company">Mosquito</h4>
+                  <p class="timeline__description">Responsible for managing multiple projects autonomously across numerous platforms and languages, including .NET and PHP.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
